[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/UIController.gd" type="Script" id=1]
[ext_resource path="res://scripts/gui/UIHover.gd" type="Script" id=2]
[ext_resource path="res://art/gui/pause.png" type="Texture" id=3]
[ext_resource path="res://art/gui/volume-high.png" type="Texture" id=4]

[node name="GUI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 0.105
margin_bottom = 3.8147e-06
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -31.5
margin_right = 512.0
margin_bottom = 31.5
rect_scale = Vector2( 0.95, 0.95 )
rect_pivot_offset = Vector2( 513, 31 )
alignment = 2

[node name="SoundButton" type="Button" parent="UI/HBoxContainer"]
margin_left = 872.0
margin_right = 944.0
margin_bottom = 63.0
rect_pivot_offset = Vector2( 35.9615, 31.9561 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 4 )
flat = true
align = 2
script = ExtResource( 2 )

[node name="PauseButton" type="Button" parent="UI/HBoxContainer"]
margin_left = 952.0
margin_right = 1024.0
margin_bottom = 63.0
rect_pivot_offset = Vector2( 35.9615, 31.9561 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true
align = 2
script = ExtResource( 2 )

[node name="LevelName" type="Label" parent="UI"]
anchor_right = 1.0
margin_left = 20.0
margin_bottom = 64.0
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 0, 32 )
text = "1-1: The Pit"
valign = 1

[node name="PauseMenu" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.345098 )

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.0
margin_top = -176.0
margin_right = 176.0
margin_bottom = 176.0
alignment = 1

[node name="Label" type="Label" parent="PauseMenu/VBoxContainer"]
margin_top = 103.0
margin_right = 352.0
margin_bottom = 159.0
text = "GAME IS PAUSED
"
align = 1

[node name="ContinueButton" type="Button" parent="PauseMenu/VBoxContainer"]
margin_top = 167.0
margin_right = 352.0
margin_bottom = 204.0
rect_pivot_offset = Vector2( 180, 23 )
focus_mode = 0
enabled_focus_mode = 0
text = "Continue"
flat = true
script = ExtResource( 2 )

[node name="QuitButton" type="Button" parent="PauseMenu/VBoxContainer"]
margin_top = 212.0
margin_right = 352.0
margin_bottom = 249.0
rect_pivot_offset = Vector2( 180, 19 )
focus_mode = 0
enabled_focus_mode = 0
text = "Quit"
flat = true
script = ExtResource( 2 )

[connection signal="mouse_entered" from="UI/HBoxContainer/SoundButton" to="UI/HBoxContainer/SoundButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="UI/HBoxContainer/SoundButton" to="UI/HBoxContainer/SoundButton" method="_on_mouse_exited"]
[connection signal="pressed" from="UI/HBoxContainer/SoundButton" to="." method="_on_SoundButton_pressed"]
[connection signal="visibility_changed" from="UI/HBoxContainer/SoundButton" to="UI/HBoxContainer/SoundButton" method="_on_visibility_changed"]
[connection signal="mouse_entered" from="UI/HBoxContainer/PauseButton" to="UI/HBoxContainer/PauseButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="UI/HBoxContainer/PauseButton" to="UI/HBoxContainer/PauseButton" method="_on_mouse_exited"]
[connection signal="pressed" from="UI/HBoxContainer/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="visibility_changed" from="UI/HBoxContainer/PauseButton" to="UI/HBoxContainer/PauseButton" method="_on_visibility_changed"]
[connection signal="mouse_entered" from="PauseMenu/VBoxContainer/ContinueButton" to="PauseMenu/VBoxContainer/ContinueButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PauseMenu/VBoxContainer/ContinueButton" to="PauseMenu/VBoxContainer/ContinueButton" method="_on_mouse_exited"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="visibility_changed" from="PauseMenu/VBoxContainer/ContinueButton" to="PauseMenu/VBoxContainer/ContinueButton" method="_on_visibility_changed"]
[connection signal="mouse_entered" from="PauseMenu/VBoxContainer/QuitButton" to="PauseMenu/VBoxContainer/QuitButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PauseMenu/VBoxContainer/QuitButton" to="PauseMenu/VBoxContainer/QuitButton" method="_on_mouse_exited"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="visibility_changed" from="PauseMenu/VBoxContainer/QuitButton" to="PauseMenu/VBoxContainer/QuitButton" method="_on_visibility_changed"]
